syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message GetDeviceByModuleRequest {
	OpModule module = 1 [(validate.rules).message.required = true];
}

message GetDeviceByModuleResponse {
	Device device = 1;
}
